fix layout issues

--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -13,7 +13,7 @@ body {
 }
 
 .home__inputContainer > input {
-  width: 300px;
+  width: 100%;
   border: none;
   margin-left: 20px;
   outline: none;
