--- a/src/index.css
+++ b/src/index.css
@@ -10,5 +10,6 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
 
-.URLEncoder {
+.App {
+  width: 500px;
 }
